# Python-AI-Training-Internship-Unsaid-Talks-

Session 10.1/: level_v1_agents.py  main.py  pyproject.toml  requirements.txt
Session 9 Tasks/Task 1/: untitled0.py
Session 9 Tasks/Task 2/: untitled1.py
Task 1/: arithematicoperations.py  greeting.py  positvenegativezero.py  simpleprogram.py  swapping.py
Task 2/: Report Card.py
Task 3/: Dice Game.py  Password Vault.py
Task 4/Assignment 4.1/: Cond. Data Filtering.py  Dataframe Calc.py  Numpy Array.py
Task 4/Assignment 4.2/: Melbourne Housing Dataset Preprocessing.py
