[project]
name = "agno-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.3.1",
    "agno",
    "duckduckgo-search",
    "pypdf",
    "lancedb",
    "tantivy",
    "streamlit",
    "yfinance",
    "sqlalchemy",
    "fastapi[standard]",
    "serpapi",
    "google-generativeai",
    "python-dotenv"
]
